--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           push: true
           tags: brewery/export-service:dev-latest
-          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
