ci: change docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   serve:
     container_name: export-service
+    # image: brewery/export-service:dev-latest
     build:
       context: .
       dockerfile: Dockerfile
