--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,7 @@
 sonar.organization=brewinteractive
 sonar.projectKey=BrewInteractive_export-service-nestjs
-
 sonar.sources=.
+sonar.tests=.
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
