--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.tests=.
 sonar.test.inclusions=**/*.spec.ts
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.exclusions=test/**
