--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
