--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,4 @@ sonar.test.inclusions=**/*.spec.ts
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.exclusions=test/**
+sonar.coverage.exclusions=src/main.ts
